# study-assistant-agent-workbench

./: .dockerignore  .gitignore  PROJECT_CASE_STUDY.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  database.py  emailer.py  identity.py  learning.py  main.py  prompts.py  schemas.py  state.py
backend/app/api/: deps_auth.py  routes_auth.py  routes_documents.py  routes_lab.py  routes_settings.py
backend/app/llm/: access.py  base.py  deepseek_client.py  gemini_client.py  mock_client.py  openai_client.py  provider.py
backend/app/pipeline/: agent_a.py  agent_b.py  agent_c.py  agent_t.py  formulas.py  preprocess.py  retrieval.py  worker.py
backend/app/security/: crypto.py
backend/app/services/: quality.py  store.py
backend/app/utils/: markdown_math.py  text.py
backend/tests/: test_agent_b_parallel.py  test_agent_c_resilience.py  test_agent_t_translation.py  test_auth_flow.py  test_bookwriter_migration.py  test_continuity_pipeline.py  test_deepseek_provider.py  test_deploy_hygiene.py  test_document_flow.py  test_gemini_client.py  test_openai_compat.py  test_prompt_defaults.py  test_smtp_modes.py  test_vision_preprocess.py
deploy/: docker-compose.de.yml
deploy/docker/: backend.Dockerfile  frontend.Dockerfile
deploy/env/: backend.de.env.example
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AccountsPanel.tsx  AuthPanel.tsx  ExplanationLabPanel.tsx  HistoryPanel.tsx  LatexBlock.tsx  Sidebar.tsx  (+5 more)
scripts/: dev-random-ports.sh  dev-stop.sh
(+8 files in other folders)
